3-gitops-manifests/voting-app-gitops-manifests/ingress-controller-alb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-load-balancer-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: aws-load-balancer-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - name: controller
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.7.2
          args:
            - --cluster-name=dev-votingapp-cluster
            - --ingress-class=alb
